- Fixed the issue that the event "moh_agitators.2" (Wuxu Reform) could not be triggered.

beta-0.2.1

Fixes:
- Incorporate the Western Territories bug fix.

beta-0.3

Fixes:
- Compatibility with historical population growth and resources.
- Fixed tons of errors triggered by c:CHI ?= this.
- Incorporate the Western Territories percentage error.

beta-0.3.1

Fixes:
- Temporarily removed Prince Gong.

Changes:
- Xinhai JE new triggers.

beta-0.3.2

Changes:
- Korean translation by manchikim & Winterboy.
- Xianfeng JE now has description for the way of reducing the pressure of the Emperor.

beta-0.3.3

Fixes:
- Localization dupulication.

beta-0.3.4

Changes:
- New Fragile Unity JE.
- If you failed Xinhai Revolution JE, China will shattered into warlords.

beta-0.4

Changes:
- Let Lin Zexu no longer die easily.
- New Xinhai Revolution JE.
[img]https://i.imgur.com/CAABFis.png[/img]

beta-0.4.1

Changes:
- You can now ban opium even if you have lost the opium wars. (You should be a council republic)

beta-0.5

Changes:
- A new dynasty name can be chosen in the civil war (monarchy).
- Mongolia can become Great Yuan.
- Changed some province and city names.

beta-0.5.1

Fixes:
- Made Transportation of Grain by Sea easier to complete.
- Wuxu Reform attempts to trigger every month.
- Localization.

beta-0.5.2

Fixes:
- Blow to the waist event trigger.

beta-0.6

Changes:
- Game version 1.8 compatibility.

Fixes:
- File encoding.
- Huang Xing's character template names.
- Other bug fixes.

beta-0.6.1

Changes:

- Adjusted the triggers for the Revolutionaries and Wuxu Reform to make them easier to activate.
- Added the Nian Rebellion event.
- Lexing Zhang is no longer the leader of the Rural Folks interest group.
- The new leader of the Rural Folks interest group is Shu Tao.
- Added dynamic name for Hong Kong (Xin'an).


beta-0.6.2

Fixes:

- Formable countries gui.

beta-0.6.3

Fixes:

- Flavoured ideology not able to trigger.

Changes:

- Added more names.