@@ -1,2 +1,2 @@
 ﻿l_english:
- HUB_NAME_STATE_SHAOZHOU_port_uk: "Hong Kong"
+ HUB_NAME_STATE_SHAOZHOU_port_cn: "Xin'an"
