@@ -319,3 +319,10 @@
   nian_rebellion.1.f: "They gathered and dispersed unpredictably, waging campaigns across vast areas, making it difficult for government forces to suppress them. Skilled in mounted archery and known for their swift movements, the Nian forces plundered provisions along their path, destroying villages and wreaking havoc.\n\nThey seldom remained in one place, retreating to distant regions when pressure mounted. As their numbers grew, they became a formidable rebellion, exacerbating the chaos across southeastern provinces. Local officials were alarmed and found themselves at a loss to respond effectively."
   nian_rebellion.1.a: "Bunch of bumpkins."
   nian_rebellion.1.b: "We should stand with them."
+  self_strengthening.2.t: "Generous Donation"
+  self_strengthening.2.d: "Donation from [SCOPE.sCharacter('donate_character_scope').GetCustom('GetUniversalFullName')]"
+  self_strengthening.2.f: "[SCOPE.sCharacter('donate_character_scope').GetFirstName] generously donated a large sum of money from their own pocket to support the country's modernization efforts.\n\n[SCOPE.sCharacter('donate_character_scope').GetFirstName] intends to support the development of [SCOPE.sState('self_strengthening_donate_state').GetName], but we may also choose to use this money for more meaningful projects."
+  self_strengthening.2.a: "We should thank them."
+  self_strengthening.2.b: "This money can be used to repair the garden."
+  self_strengthening.3.f: "[SCOPE.sCharacter('donate_character_scope').GetFirstName] generously donated a large sum of money from their own pocket to support the country's modernization efforts.\n\n[SCOPE.sCharacter('donate_character_scope').GetFirstName] intends to support the construction of the navy, but we may also choose to use this money for more meaningful projects."
+  Beiyang_Fleet: "Beiyang Fleet"
