@@ -165,7 +165,7 @@
   china_later_jin_desc: "We are the ones who are the real Jurchen!"
   je_self_strengthing: "Self-Strengthening Movement"
   je_self_strengthing_reason: "According to the #italic Six Articles for Comprehensive Planning of Foreign Affairs#! proposed by the Self-Strengthening faction, we must quickly develop our national strength to resist foreign invasions. [ROOT.GetCountry.GetName] needs to focus on studying Western #bold military#!, #bold education#!, #bold industry#!, and #bold diplomacy#! within a limited timeframe to enhance national power.\n\nThe Self-Strengthening ministers may generously donate funds out of their own pockets, and we can decide how to allocate the contributions. There is a #variable 25%#! chance that newly emerging non-historical characters will belong to the Self-Strengthening faction. The following are historical Self-Strengthening leaders: $je_self_strengthing_reason_people_list$"
-  je_self_strengthing_reason_people_list: "\n· #bold Li Hongzhang#!\n· #bold Zuo Zongtang#!\n· #bold Zhang Zhidong#!\n· #bold Wei Yuan#!\n· #bold Wenxiang#!\n· #bold Yixin#!\n· #bold Guiliang#!"
+  je_self_strengthing_reason_people_list: "\n· #bold Hongzhang Li#!\n· #bold Zongtang Zuo#!\n· #bold Zhidong Zhang#!\n· #bold Yuan Wei#!\n· #bold Wenxiang Guwalgiya#!\n· #bold Yixin Aisin Gioro#!\n· #bold Guiliang Guwalgiya#!"
   je_self_strengthing.tt.complete.world: "Possessing the third-largest naval power projection in the world."
   je_self_strengthing.tt.complete.asia: "Possessing the third-largest naval power projection in Asia."
   je_self_strengthing_main_complete_tt: "Complete three of the four #bold Self-Strengthening Movement#! objectives"
@@ -174,7 +174,7 @@
   je_self_strengthing_military_reason: "Self-Strengthening ministers, envious of the naval power of Western nations, believe that [ROOT.GetCountry.GetName] should also develop its navy."
   je_self_strengthing_industry: "Self-Strengthening Movement: Industry"
   je_self_strengthing_industry_reason: "Having missed the Industrial Revolution, [ROOT.GetCountry.GetName] must accelerate efforts to achieve wealth and prosperity."
-  je_self_strengthing_industry_goal: "Increase [concept_gdp] by #variable 15%#!"
+  je_self_strengthing_industry_goal: "Increase [concept_gdp] by #variable 25%#!"
   je_self_strengthing_fail_tt: "Lose #variable 2#! wars; current count: #variable [ROOT.GetCountry.MakeScope.Var('self_strengthening_lost_wars').GetValue]#! wars"
   je_self_strengthing_education_tt_complete: "Complete #bold Establish a University#! [concept_journal_entry]"
   je_self_strengthing_education: "Self-Strengthening Movement: Education"
