@@ -58,9 +58,6 @@
  moh_Yu: "Yu"
  moh_Zhao: "Zhao"
  moh_Li_1: "Li"
- ecchi_Khedrup: "Khedrup"
- ecchi_Trinley: "Trinley"
- ecchi_Thubten: "Thubten"
  moh_Tenzin: "Tenzin"
  moh_Shatra: "Shatra"
  moh_Wangpug_Gyalpo: "Wangpug Gyalpo"
@@ -95,3 +92,4 @@
  
  moh_Shu_1: "Shu"
  moh_Zongyu: "Zongyu"
+ moh_Changyou: "Changyou"
