@@ -1,2 +1,2 @@
 ﻿l_simp_chinese:
- HUB_NAME_STATE_SHAOZHOU_port_uk: "香港"
+ HUB_NAME_STATE_SHAOZHOU_port_cn: "新安"
