@@ -330,3 +330,10 @@
   nian_rebellion.1.f: "其众以游勇散兵、饥民无赖为主，结伙而动，无固定巢穴，时聚时散，转战千里，官军难以追剿。捻众擅长骑射，行动迅捷，沿途劫掠粮饷，焚毁乡里，破坏尤烈；又不拘一地，凡风声稍紧，便即远遁他处。\n\n其势渐大，聚而为乱，更成东南各省之大患，地方官府震惧，措手无策。"
   nian_rebellion.1.a: "一群土包子"
   nian_rebellion.1.b: "我们跟他们干了！"
+  self_strengthening.2.t: "慷慨的捐赠"
+  self_strengthening.2.d: "来自[SCOPE.sCharacter('donate_character_scope').GetCustom('GetUniversalFullName')]的捐赠"
+  self_strengthening.2.f: "[SCOPE.sCharacter('donate_character_scope').GetFirstName]自掏腰包慷慨解囊，捐赠了大量资金用于国家的洋务事业。\n\n[SCOPE.sCharacter('donate_character_scope').GetFirstName]打算支持[SCOPE.sState('self_strengthening_donate_state').GetName]的建设，我们也可与选择拿这笔钱做更有意义的事。"
+  self_strengthening.2.a: "我们应该感谢他"
+  self_strengthening.2.b: "这笔钱可以拿来修园子"
+  self_strengthening.3.f: "[SCOPE.sCharacter('donate_character_scope').GetFirstName]自掏腰包慷慨解囊，捐赠了大量资金用于国家的洋务事业。\n\n[SCOPE.sCharacter('donate_character_scope').GetFirstName]打算支持水师的建设，我们也可与选择拿这笔钱做更有意义的事。"
+  Beiyang_Fleet: "北洋水师"
