@@ -67,9 +67,6 @@
   moh_Li_1: "丽"
 
   # 历史名字
-  ecchi_Khedrup: "凯珠"
-  ecchi_Trinley: "成烈"
-  ecchi_Thubten: "图登"
   moh_Tenzin: "丹增"
   moh_Shatra: "夏扎"
   moh_Wangpug_Gyalpo: "旺曲杰布"
@@ -108,3 +105,4 @@
 
   moh_Shichang: "世昌"
   moh_Biguang: "壁光"
+  moh_Changyou: "长佑"
